:icons: font

= Gentics Mesh Changelog

== 0.11.3 (TBD)

icon:plus[] Logging: The logging verbosity was reduced.

icon:plus[] GraphQL: It is now possible to load a list of all languages of a node via the added `.languages` field.

icon:plus[] GraphQL: The underlying graphql-java library was updated to version 6.0

== 0.11.2 (21.11.2017)

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.30

icon:check[] Core: Fixed a bug which caused unusual high CPU usage. link:https://github.com/gentics/mesh/issues/201[#201]

== 0.11.1 (13.11.2017)

icon:plus[] Elasticsearch: Add support for inline queries.

icon:check[] Elasticsearch: In some cases the connection to Elasticsearch was not directly ready during startup. This caused various issues. A startup check has been added in order to prevent this.

icon:check[] Schema: A bug within the schema update mechanism which removed the urlField property value has been fixed.

icon:check[] Elasticsearch: A deadlock situation which could occur during schema validation was fixed.

== 0.11.0 (11.11.2017)

CAUTION: GraphQL: The root field `releases` has been removed. The root field `release` now takes no parameters and loads the active release.

CAUTION: Elasticsearch: Search queries will now automatically be wrapped in a boolean query in order to check permissions much more efficiently. 

CAUTION: The schema field property `searchIndex` / `searchIndex.addRaw` has been removed. The property was replaced by a mapping definition which can be added to each field. 
         All schemas will automatically be migrated to the new format. Please keep in mind to also update any existing schema files which you may have stored externally.

```json
{
  "name": "dummySchema",
  "displayField": "name",
  "fields": [
    {
      "name": "name",
      "label": "Name",
      "required": true,
      "type": "string",
      "elasticsearch": {
        "raw": {
          "index": "not_analyzed",
          "type": "string"