@@ -4,6 +4,8 @@
 
 == 0.11.3 (TBD)
 
+icon:plus[] Config: The eventloop and worker pool size can now be configured within the `mesh.yml` file.
+
 icon:plus[] Logging: The logging verbosity was reduced.
 
 icon:plus[] GraphQL: It is now possible to load a list of all languages of a node via the added `.languages` field.
